// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextSearch where <Enter> has not been pressed 1`] = `
<div
  className="project-text-search"
>
  <div
    className="header"
  >
    <SearchInput
      count={0}
      handleClose={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Find in files…"
      query=""
      showErrorEmoji={true}
      size="big"
      summaryMsg=""
    />
  </div>
</div>
`;

exports[`TextSearch found no search results 1`] = `
<div
  className="project-text-search"
>
  <div
    className="header"
  >
    <SearchInput
      count={0}
      handleClose={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Find in files…"
      query="foo"
      showErrorEmoji={true}
      size="big"
      summaryMsg="0 results"
    />
  </div>
  <div
    className="no-result-msg absolute-center"
  >
    No results found
  </div>
</div>
`;

exports[`TextSearch found search results 1`] = `
<div
  className="project-text-search"
>
  <div
    className="header"
  >
    <SearchInput
      count={5}
      handleClose={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Find in files…"
      query="match"
      showErrorEmoji={true}
      size="big"
      summaryMsg="5 results"
    />
  </div>
  <ManagedTree
    autoExpand={1}
    autoExpandDepth={1}
    getChildren={[Function]}
    getParent={[Function]}
    getPath={[Function]}
    getRoots={[Function]}
    itemHeight={24}
    renderItem={[Function]}
  />
</div>
`;